--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
                 <li><a href="">Agencja</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Kontakt</a></li>
-        </nav>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+48111111111">+48 111 111 111</a></li>
             </ul>
+        </nav>
     </header>
     <main>
         <h1>Efektywne rozwiązania dla Waszego biznesu</h1>
         <button type="button">Zamów usługę</button>
-        <div>
-            <ul>
+        <p><ul>
                 <li><h3>LOREM IPSUM</h3> 
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                     Autem incidunt rerum nemo nesciunt, voluptatem minima quaerat obcaecati? 
@@ -51,76 +50,72 @@
                     </p>
                 </li>
             </ul>
-        </div>
-        <div>
-             <h2>Czym się zajmujemy</h2>
-             <ul>
+        </p>
+            <h2>Czym się zajmujemy</h2>
+            <ul>
                 <li><p><img src="images/keyboard.jpg"
                             alt="Klawiatura komputerowa"
                             width="370"
                             height="294"
-                        />
+                            />
                     </p>
                 </li>
                 <li><p><img src="images/laptop.jpg"
                             alt="Laptop"
                             width="370"
                             height="294"
-                        />
+                            />
                     </p>
                 </li>
                 <li><p><img src="images/tablet.jpg"
-                            alt="Tablet"
-                            width="370"
+                            alt="Tablet"                            width="370"
                             height="294"
-                        />
+                            />
                     </p>
                 </li>
-        </div>
-        <div>
-            <h2>Nasz zespół</h2>
-            <lu>
-                <li><img src="images/pdesigner.jpg"
-                        alt="Product Designer"
-                        width="270"
-                        height="260"
-                        />
-                    <h3>John Doe</h3>
-                    Product Designer
-                </li>
-                <li><img src="images/fdeveloper.jpg"
-                        alt="Frontend Developer"
-                        width="270"
-                        height="260"
-                         />
-                    <h3>John Doe</h3>
-                    Frontend Developer
-                </li>
-                <li><img src="images/marketing.jpg"
-                        alt="Marketing"
-                        width="270"
-                        height="260"
-                        />
-                    <h3>John Doe</h3>
-                    Marketing
-                </li>
-                <li><img src="images/uidesigner.jpg"
-                        alt="UI Designer"
-                        width="270"
-                        height="260"
-                        />
-                    <h3>John Doe</h3>
-                    UI Designer
-                </li>
-            </lu>
-        </div>
+        </ul>
+        <h2>Nasz zespół</h2>
+        <lu>
+           <li><img src="images/pdesigner.jpg"
+                    alt="Product Designer"                        width="270"
+                    height="260"
+                    />
+                <h3>John Doe</h3>
+                Product Designer
+            </li>
+            <li><img src="images/fdeveloper.jpg"
+                    alt="Frontend Developer"
+                    width="270"
+                    height="260"
+                     />
+                <h3>John Doe</h3>
+                Frontend Developer
+            </li>
+            <li><img src="images/marketing.jpg"
+                    alt="Marketing"
+                    width="270"
+                    height="260"
+                    />
+                <h3>John Doe</h3>
+                Marketing
+            </li>
+            <li><img src="images/uidesigner.jpg"
+                    alt="UI Designer"
+                    width="270"
+                    height="260"
+                    />
+                <h3>John Doe</h3>
+                UI Designer
+            </li>
+        </lu>
     </main>
     <footer>
         <p><a href="">WebStudio</a></p>
         <p><adress>m. Warszawa, Aleje Jerozolimskie 21</adress></p>
-        <lu>
+        <p><lu>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+48111111111">+48 111 111 111</a></li>
-        </lu>
+            </lu>
+        </p>
     </footer>
 </html>
