--- a/index.html
+++ b/index.html
@@ -11,46 +11,35 @@
             <ul>
                 <li><a href="">Agencja</a></li>
                 <li><a href="">Portfolio</a></li>
-                <li><a href="">Kontakt</a></li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+48111111111">+48 111 111 111</a></li>
-            </ul>
+                <li><a href="">Kontakt</a></li></ul>
         </nav>
+        <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+        <p><a href="tel:+48111111111">+48 111 111 111</a></p>
     </header>
     <main>
         <h1>Efektywne rozwiązania dla Waszego biznesu</h1>
         <button type="button">Zamów usługę</button>
-        <p><ul>
-                <li><h3>LOREM IPSUM</h3> 
+        <ul><li><h3>LOREM IPSUM</h3> 
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                     Autem incidunt rerum nemo nesciunt, voluptatem minima quaerat obcaecati? 
                     Id nesciunt tempore assumenda quasi, rem dolorum illo omnis? 
-                    Labore ut sint velit?
-                    </p>
-                </li>
-                <li><h3>LOREM IPSUM</h3> 
+                    Labore ut sint velit?</p>
+                </li><li><h3>LOREM IPSUM</h3> 
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                     Autem incidunt rerum nemo nesciunt, voluptatem minima quaerat obcaecati? 
                     Id nesciunt tempore assumenda quasi, rem dolorum illo omnis? 
-                    Labore ut sint velit?
-                    </p>
-                </li>
-                <li><h3>LOREM IPSUM</h3> 
+                    Labore ut sint velit?</p>
+                </li><li><h3>LOREM IPSUM</h3> 
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                     Autem incidunt rerum nemo nesciunt, voluptatem minima quaerat obcaecati? 
                     Id nesciunt tempore assumenda quasi, rem dolorum illo omnis? 
-                    Labore ut sint velit?
-                    </p>
-                </li>
-                <li><h3>LOREM IPSUM</h3> 
+                    Labore ut sint velit?</p>
+                </li><li><h3>LOREM IPSUM</h3> 
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                     Autem incidunt rerum nemo nesciunt, voluptatem minima quaerat obcaecati? 
                     Id nesciunt tempore assumenda quasi, rem dolorum illo omnis? 
-                    Labore ut sint velit?
-                    </p>
-                </li>
-            </ul>
-        </p>
+                    Labore ut sint velit?</p>
+                </li></ul>
             <h2>Czym się zajmujemy</h2>
             <ul>
                 <li><p><img src="images/keyboard.jpg"
@@ -75,8 +64,7 @@
                 </li>
         </ul>
         <h2>Nasz zespół</h2>
-        <lu>
-           <li><img src="images/pdesigner.jpg"
+        <ul><li><img src="images/pdesigner.jpg"
                     alt="Product Designer"                        width="270"
                     height="260"
                     />
@@ -107,15 +95,13 @@
                 <h3>John Doe</h3>
                 UI Designer
             </li>
-        </lu>
+        </ul>
+    
     </main>
-    <footer>
-        <p><a href="">WebStudio</a></p>
-        <p><adress>m. Warszawa, Aleje Jerozolimskie 21</adress></p>
-        <p><lu>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+48111111111">+48 111 111 111</a></li>
-            </lu>
-        </p>
-    </footer>
+        <footer><p><a href="">WebStudio</a></p></footer>
+
+    <adress>m. Warszawa, Aleje Jerozolimskie 21
+            <ul><li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li><li><a href="tel:+48111111111">+48 111 111 111</a></li></ul>
+        </adress>
+    
 </html>
